--- a/src/assets/style/common.less
+++ b/src/assets/style/common.less
@@ -20,3 +20,6 @@ body {
   background-image: url(../images/1-1.jpg);
   background-size: 100% 100%;
 }
+body.score {
+  background-image: url(../images/4-1.jpg);
+}
